sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value length
  var gap : Int = length
                  ^AlgCombSort:11: error: not found: value length
    while (rang+gap<length) {
                    ^