sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var gap : Int = length
  var swapped : Boolean = true
  do {
    swapped = false
    if (gap>1) {
      gap = (gap.toDouble / 1.3).toInt
    }
    var rang:Int = 0
    while (rang+gap<length) {
      if (isSmaller(rang,rang+gap)) {
        swap(rang,rang+gap)
        swapped=true
      }
      rang+=1
    }
  } while (gap>1 || swapped)
}